# crates/solvers-dto/src/solution.rs
@@ -22,10 +22,10 @@ pub struct Solution {
     pub prices: HashMap<H160, U256>,
     pub trades: Vec<Trade>,
     #[serde(default)]
-    pub pre_interactions: Vec<InteractionData>,
+    pub pre_interactions: Vec<Call>,
     pub interactions: Vec<Interaction>,
     #[serde(default)]
-    pub post_interactions: Vec<InteractionData>,
+    pub post_interactions: Vec<Call>,
     #[serde(skip_serializing_if = "Option::is_none")]
     pub gas: Option<u64>,
 }
@@ -100,7 +100,7 @@ pub enum Interaction {
 
 #[derive(Debug, Serialize)]
 #[serde(tag = "kind", rename_all = "camelCase")]
-pub struct InteractionData {
+pub struct Call {
     pub target: H160,
     pub value: U256,
     pub calldata: Vec<u8>,
